--- a/base/plugins/score-plugin-deviceexplorer/CMakeLists.txt
+++ b/base/plugins/score-plugin-deviceexplorer/CMakeLists.txt
@@ -64,6 +64,7 @@ set(HDRS
 
     "${CMAKE_CURRENT_SOURCE_DIR}/Explorer/DeviceList.hpp"
 
+    "${CMAKE_CURRENT_SOURCE_DIR}/DeviceExplorerApplicationPlugin.hpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/score_plugin_deviceexplorer.hpp"
 
 )
