--- a/base/plugins/score-plugin-curve/CMakeLists.txt
+++ b/base/plugins/score-plugin-curve/CMakeLists.txt
@@ -33,7 +33,6 @@ set(HDRS
   "${CMAKE_CURRENT_SOURCE_DIR}/Curve/Palette/Tools/CurveTool.hpp"
   "${CMAKE_CURRENT_SOURCE_DIR}/Curve/Palette/Tools/MoveTool.hpp"
   "${CMAKE_CURRENT_SOURCE_DIR}/Curve/Palette/Tools/SmartTool.hpp"
-  "${CMAKE_CURRENT_SOURCE_DIR}/Curve/Panel/CurvePanel.hpp"
   "${CMAKE_CURRENT_SOURCE_DIR}/Curve/Point/CurvePointModel.hpp"
   "${CMAKE_CURRENT_SOURCE_DIR}/Curve/Point/CurvePointView.hpp"
   "${CMAKE_CURRENT_SOURCE_DIR}/Curve/Process/CurveProcessFactory.hpp"
@@ -48,6 +47,7 @@ set(HDRS
   "${CMAKE_CURRENT_SOURCE_DIR}/Curve/Segment/Linear/LinearSegment.hpp"
   "${CMAKE_CURRENT_SOURCE_DIR}/Curve/Segment/Noise/NoiseSegment.hpp"
   "${CMAKE_CURRENT_SOURCE_DIR}/Curve/Segment/PointArray/PointArraySegment.hpp"
+  "${CMAKE_CURRENT_SOURCE_DIR}/Curve/Segment/PointArray/psimpl.h"
   "${CMAKE_CURRENT_SOURCE_DIR}/Curve/Segment/Power/PowerSegment.hpp"
   "${CMAKE_CURRENT_SOURCE_DIR}/Curve/Segment/Sin/SinSegment.hpp"
   "${CMAKE_CURRENT_SOURCE_DIR}/Curve/Settings/CurveSettingsFactory.hpp"
