--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,8 +23,8 @@ cmake_policy(VERSION 3.9)
 set(SCORE_VERSION_MAJOR 1)
 set(SCORE_VERSION_MINOR 0)
 set(SCORE_VERSION_PATCH 0)
-set(SCORE_VERSION_EXTRA b38)
-set(SCORE_CODENAME "peau crite")
+set(SCORE_VERSION_EXTRA b41)
+set(SCORE_CODENAME "tournicotis tournicotons")
 set(SCORE_VERSION "${SCORE_VERSION_MAJOR}.${SCORE_VERSION_MINOR}.${SCORE_VERSION_PATCH}-${SCORE_VERSION_EXTRA}")
 
 enable_testing()
