--- a/tools/sdk/Linux/Dockerfile
+++ b/tools/sdk/Linux/Dockerfile
@@ -1,7 +1,7 @@
 FROM centos:7
 
-RUN yum -y update 
-RUN yum -y install epel-release gcc gcc-c++ wget flex bison rsync bzip2 make xz
+RUN yum -y update
+RUN yum -y install epel-release gcc gcc-c++ wget flex bison rsync bzip2 make xz file
 
 ADD gcc-deps.sh /image/gcc-deps.sh
 RUN /image/gcc-deps.sh
@@ -11,3 +11,7 @@ RUN /image/gcc.sh
 
 ADD qt.sh /image/qt.sh
 RUN /image/qt.sh
+
+ADD audio.sh /image/audio.sh
+RUN /image/audio.sh
+
