--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,11 +20,11 @@ project(score LANGUAGES C CXX)
 cmake_minimum_required(VERSION 3.9 FATAL_ERROR)
 cmake_policy(VERSION 3.9)
 
-set(SCORE_VERSION_MAJOR 1)
+set(SCORE_VERSION_MAJOR 2)
 set(SCORE_VERSION_MINOR 0)
 set(SCORE_VERSION_PATCH 0)
-set(SCORE_VERSION_EXTRA b42)
-set(SCORE_CODENAME "tournicotis tournicotons")
+set(SCORE_VERSION_EXTRA a3)
+set(SCORE_CODENAME "patch chord")
 set(SCORE_VERSION "${SCORE_VERSION_MAJOR}.${SCORE_VERSION_MINOR}.${SCORE_VERSION_PATCH}-${SCORE_VERSION_EXTRA}")
 
 enable_testing()
