--- a/appveyor.yml
+++ b/appveyor.yml
@@ -11,7 +11,7 @@ install:
   - appveyor DownloadFile "https://storage.googleapis.com/google-code-archive-downloads/v2/code.google.com/unsis/nsis-2.46.5-Unicode-setup.exe" -FileName nsis.exe
   - nsis.exe /S
   - appveyor DownloadFile "https://github.com/OSSIA/score-sdk/releases/download/sdk9/win-audio-sdk.zip" -FileName win-audio-sdk.zip
-  - 7z e win-audio-sdk.zip
+  - 7z x win-audio-sdk.zip
   - move portaudio c:\portaudio
   - move tbb c:\tbb
   - move ffmpeg c:\ffmpeg
