servus header only

--- a/base/plugins/score-plugin-deviceexplorer/CMakeLists.txt
+++ b/base/plugins/score-plugin-deviceexplorer/CMakeLists.txt
@@ -152,7 +152,7 @@ if(OSSIA_DNSSD)
     "${CMAKE_CURRENT_SOURCE_DIR}/Explorer/Widgets/ZeroConf/ZeroconfBrowser.hpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/Explorer/Widgets/ZeroConf/ZeroconfBrowser.cpp")
 
-  target_link_libraries(${PROJECT_NAME} PRIVATE Servus_iface ServusQt)
+  target_link_libraries(${PROJECT_NAME} PRIVATE Servus_iface)
   target_include_directories(${PROJECT_NAME} PRIVATE ${OSSIA_3RDPARTY_FOLDER}/Servus)
 endif()
 target_link_libraries(${PROJECT_NAME} PRIVATE Qt5::Core)
