--- a/base/plugins/score-plugin-midi/CMakeLists.txt
+++ b/base/plugins/score-plugin-midi/CMakeLists.txt
@@ -56,7 +56,7 @@ set(SOURCE_FILES
   )
 
 add_library(${PROJECT_NAME} ${HEADER_FILES} ${SOURCE_FILES})
-score_generate_command_list_file(${PROJECT_NAME} "${CMAKE_CURRENT_SOURCE_DIR}/score_plugin_midi.hpp")
+score_generate_command_list_file(${PROJECT_NAME} "${HEADER_FILES}")
 target_link_libraries(${PROJECT_NAME} PUBLIC score_plugin_engine RtMidi17)
 target_include_directories(${PROJECT_NAME} PRIVATE "${OSSIA_3RDPARTY_FOLDER}/GSL")
 
