--- a/base/plugins/score-plugin-fx/CMakeLists.txt
+++ b/base/plugins/score-plugin-fx/CMakeLists.txt
@@ -27,8 +27,5 @@ add_library(
 )
 
 score_moc_headers(${PROJECT_NAME} "${CMAKE_CURRENT_SOURCE_DIR}/score_plugin_fx.hpp")
-target_link_libraries(score_plugin_fx PUBLIC score_plugin_engine score_plugin_media)
-if(MSVC)
-  target_compile_definitions(score_plugin_fx PRIVATE INCOMPETENT_COMPILER)
-endif()
+target_link_libraries(score_plugin_fx PUBLIC score_plugin_engine)
 setup_score_plugin(score_plugin_fx)
