start working on #640

--- a/base/plugins/score-plugin-engine/CMakeLists.txt
+++ b/base/plugins/score-plugin-engine/CMakeLists.txt
@@ -58,6 +58,8 @@ set(HDRS
     "${CMAKE_CURRENT_SOURCE_DIR}/Engine/Executor/IntervalRawPtrComponent.hpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/Engine/Executor/Automation/Component.hpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/Engine/Executor/Automation/SplineComponent.hpp"
+    "${CMAKE_CURRENT_SOURCE_DIR}/Engine/Executor/Automation/InterpolationComponent.hpp"
+    "${CMAKE_CURRENT_SOURCE_DIR}/Engine/Executor/Automation/InterpStateComponent.hpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/Engine/Executor/Automation/GradientComponent.hpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/Engine/Executor/Automation/MetronomeComponent.hpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/Engine/Executor/Mapping/Component.hpp"
@@ -155,6 +157,8 @@ set(SRCS
 "${CMAKE_CURRENT_SOURCE_DIR}/Engine/Executor/Automation/GradientComponent.cpp"
 "${CMAKE_CURRENT_SOURCE_DIR}/Engine/Executor/Automation/MetronomeComponent.cpp"
 "${CMAKE_CURRENT_SOURCE_DIR}/Engine/Executor/Automation/SplineComponent.cpp"
+"${CMAKE_CURRENT_SOURCE_DIR}/Engine/Executor/Automation/InterpolationComponent.cpp"
+"${CMAKE_CURRENT_SOURCE_DIR}/Engine/Executor/Automation/InterpStateComponent.cpp"
 "${CMAKE_CURRENT_SOURCE_DIR}/Engine/Executor/Mapping/Component.cpp"
 "${CMAKE_CURRENT_SOURCE_DIR}/Engine/Executor/Loop/Component.cpp"
 "${CMAKE_CURRENT_SOURCE_DIR}/Engine/Executor/ClockManager/ClockManagerFactory.cpp"
