try to remove boost::multi_index

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -87,6 +87,7 @@ include_directories(SYSTEM "${OSSIA_3RDPARTY_FOLDER}/brigand")
 include_directories(SYSTEM "${OSSIA_3RDPARTY_FOLDER}/hopscotch-map/src")
 include_directories(SYSTEM "${OSSIA_3RDPARTY_FOLDER}/readerwriterqueue")
 include_directories(SYSTEM "${OSSIA_3RDPARTY_FOLDER}/exprtk")
+include_directories(SYSTEM "${OSSIA_3RDPARTY_FOLDER}/multi_index/include")
 include_directories(SYSTEM "${3RDPARTY_FOLDER}/miniz")
 add_subdirectory("${3RDPARTY_FOLDER}/Qt-Color-Widgets" )
 add_subdirectory("${3RDPARTY_FOLDER}/QProgressIndicator" )
