--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,8 +24,8 @@ cmake_policy(SET CMP0025 NEW)
 set(SCORE_VERSION_MAJOR 2)
 set(SCORE_VERSION_MINOR 0)
 set(SCORE_VERSION_PATCH 0)
-set(SCORE_VERSION_EXTRA a3)
-set(SCORE_CODENAME "patch chord")
+set(SCORE_VERSION_EXTRA a4)
+set(SCORE_CODENAME "catch pord")
 set(SCORE_VERSION "${SCORE_VERSION_MAJOR}.${SCORE_VERSION_MINOR}.${SCORE_VERSION_PATCH}-${SCORE_VERSION_EXTRA}")
 
 enable_testing()
