--- a/base/lib/CMakeLists.txt
+++ b/base/lib/CMakeLists.txt
@@ -28,6 +28,7 @@ set(HEADERS
     "${CMAKE_CURRENT_SOURCE_DIR}/core/document/DocumentView.hpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/core/documentation/intro.hpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/core/documentation/models.hpp"
+    "${CMAKE_CURRENT_SOURCE_DIR}/core/messages/MessagesPanel.hpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/core/plugin/PluginDependencyGraph.hpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/core/plugin/PluginManager.hpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/core/presenter/CoreActions.hpp"
@@ -325,6 +326,7 @@ set(SRCS
 "${CMAKE_CURRENT_SOURCE_DIR}/core/document/Document.cpp"
 "${CMAKE_CURRENT_SOURCE_DIR}/core/document/DocumentModel.cpp"
 "${CMAKE_CURRENT_SOURCE_DIR}/core/document/DocumentSerialization.cpp"
+"${CMAKE_CURRENT_SOURCE_DIR}/core/messages/MessagesPanel.cpp"
 "${CMAKE_CURRENT_SOURCE_DIR}/core/plugin/PluginManager.cpp"
 "${CMAKE_CURRENT_SOURCE_DIR}/core/presenter/CoreApplicationPlugin.cpp"
 "${CMAKE_CURRENT_SOURCE_DIR}/core/presenter/DocumentManager.cpp"
