ability to swap processes in object panel

--- a/.travis.yml
+++ b/.travis.yml
@@ -38,17 +38,17 @@ matrix:
     - os: linux
       env: CONF=linux-package-appimage CAN_DEPLOY=True
 
-    - os: osx
-      env: CONF=osx-debug CAN_DEPLOY=False
-    - os: osx
-      env: CONF=osx-static-debug CAN_DEPLOY=False
+#    - os: osx
+#      env: CONF=osx-debug CAN_DEPLOY=False
+#    - os: osx
+#      env: CONF=osx-static-debug CAN_DEPLOY=False
     - os: osx
       env: CONF=osx-release CAN_DEPLOY=False
 
-    - os: linux
-      env: CONF=linux-debug CAN_DEPLOY=False
-    - os: linux
-      env: CONF=linux-static-debug CAN_DEPLOY=False
+#    - os: linux
+#      env: CONF=linux-debug CAN_DEPLOY=False
+#    - os: linux
+#      env: CONF=linux-static-debug CAN_DEPLOY=False
     - os: linux
       env: CONF=linux-release CAN_DEPLOY=False
 
